--- a/ajuda.html
+++ b/ajuda.html
@@ -1,55 +1,96 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+<!-- Declaração do documento HTML5 com idioma português do Brasil -->
 
 <head>
+    <!-- Cabeçalho do documento - contém metadados e links para recursos externos -->
     <meta charset="UTF-8">
+    <!-- Define a codificação de caracteres como UTF-8 para suportar caracteres especiais -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Configura a viewport para responsividade em dispositivos móveis -->
     <meta name="description" content="Encontre ajuda e suporte para utilizar nossa loja de instrumentos musicais.">
+    <!-- Descrição do site para motores de busca -->
     <meta name="keywords" content="instrumentos musicais, ajuda, suporte, e-commerce">
+    <!-- Palavras-chave para SEO -->
     <meta name="author" content="Nome da Loja">
+    <!-- Autor do site -->
     <title>Ajuda | Loja de Instrumentos Musicais</title>
+    <!-- Título da página que aparece na aba do navegador -->
     <link rel="stylesheet" href="css/ajuda.css">
+    <!-- Link para o arquivo CSS específico da página de ajuda -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <!-- Link para o Font Awesome (ícones) -->
 </head>
 
 <body style="background-image: url(img/banner.png)">
+    <!-- Corpo do documento com imagem de fundo -->
+
+    <!-- Header -->
     <header>
+        <!-- Cabeçalho da página com menu de navegação -->
         <nav>
+            <!-- Elemento de navegação principal -->
             <div class="menu-icon" aria-label="Menu">&#9776;</div>
+            <!-- Ícone de menu para dispositivos móveis (hamburger) -->
             <ul>
+                <!-- Lista não ordenada para os itens de navegação -->
                 <div class="logo">
+                    <!-- Container para o logo -->
                     <a href="index.html"><img src="img/logo.png" alt="Logo" class="logo-img"></a>
+                    <!-- Link para a página inicial com imagem do logo -->
                 </div>
                 <li><a href="index.html">Home</a></li>
+                <!-- Item do menu para a página inicial -->
                 <li><a href="quem-somos.html">Quem Somos</a></li>
+                <!-- Item do menu para a página "Quem Somos" -->
                 <li><a href="produtos.html">Produtos</a></li>
+                <!-- Item do menu para a página de produtos -->
                 <li><a href="#" id="login-btn">Login/Cadastro</a></li>
+                <!-- Item do menu para login/cadastro (com ID para manipulação JS) -->
                 <li><a href="carrinho.html" id="carrinho-btn">
+                        <!-- Item do menu para o carrinho de compras -->
                         <i class="fas fa-shopping-cart"></i>
+                        <!-- Ícone do carrinho -->
                         (<span id="carrinho-quantidade">0</span>)
+                        <!-- Contador de itens no carrinho (inicia com 0) -->
                     </a></li>
             </ul>
         </nav>
     </header>
 
+    <!-- Main Content -->
     <main>
-        <section class="ajuda" style="background-image: url(img/banner.png); background-repeat: repeat;" >
+        <!-- Conteúdo principal da página -->
+        <section class="ajuda" style="background-image: url(img/banner.png); background-repeat: repeat;">
+            <!-- Seção de ajuda com imagem de fundo repetida -->
             <h1>Ajuda</h1>
-            <p class="parag">Encontre respostas para as perguntas mais frequentes e instruções sobre como usar nossa
-                loja.</p>
+            <!-- Título principal da página -->
+            <p class="parag">Encontre respostas para as perguntas mais frequentes e instruções sobre como usar nossa loja.</p>
+            <!-- Texto introdutório -->
 
+            <!-- Seção: Como fazer um pedido -->
             <div class="ajuda-secao">
+                <!-- Container para seção de ajuda -->
                 <h2>Como faço um pedido?</h2>
+                <!-- Título da seção -->
                 <p>Para fazer um pedido, siga os seguintes passos:</p>
+                <!-- Texto introdutório -->
                 <ol>
+                    <!-- Lista ordenada de passos -->
                     <li>Navegue pelos nossos produtos e adicione os itens desejados ao carrinho.</li>
+                    <!-- Passo 1 -->
                     <li>Acesse o carrinho de compras clicando no ícone do carrinho no canto superior direito.</li>
+                    <!-- Passo 2 -->
                     <li>Revise os itens no carrinho e clique em "Finalizar Compra".</li>
+                    <!-- Passo 3 -->
                     <li>Preencha as informações de envio e pagamento.</li>
+                    <!-- Passo 4 -->
                     <li>Confirme o pedido e aguarde a confirmação por e-mail.</li>
+                    <!-- Passo 5 -->
                 </ol>
             </div>
 
+            <!-- Seção: Como rastrear pedido -->
             <div class="ajuda-secao">
                 <h2>Como rastrear meu pedido?</h2>
                 <p>Você pode rastrear seu pedido da seguinte maneira:</p>
@@ -60,28 +101,31 @@
                 </ol>
             </div>
 
+            <!-- Seção: Como devolver um produto -->
             <div class="ajuda-secao">
                 <h2>Como devolver um produto?</h2>
                 <p>Para devolver um produto, siga os seguintes passos:</p>
                 <ol>
-                    <li>Entre em contato com nosso suporte ao cliente através do e-mail
-                        contato@lojadeinstrumentos.com.br.</li>
+                    <li>Entre em contato com nosso suporte ao cliente através do e-mail contato@lojadeinstrumentos.com.br.</li>
                     <li>Informe o motivo da devolução e o número do pedido.</li>
                     <li>Embale o produto na embalagem original e envie para o endereço fornecido pelo suporte.</li>
                     <li>Aguarde a confirmação da devolução e o reembolso do valor pago.</li>
                 </ol>
             </div>
 
+            <!-- Seção: Métodos de pagamento -->
             <div class="ajuda-secao">
                 <h2>Quais métodos de pagamento são aceitos?</h2>
                 <p>Aceitamos os seguintes métodos de pagamento:</p>
                 <ul>
+                    <!-- Lista não ordenada -->
                     <li>Cartão de Crédito</li>
                     <li>Boleto Bancário</li>
                     <li>Transferência Bancária</li>
                 </ul>
             </div>
 
+            <!-- Seção: Contato com suporte -->
             <div class="ajuda-secao">
                 <h2>Como posso entrar em contato com o suporte ao cliente?</h2>
                 <p>Você pode entrar em contato com nosso suporte ao cliente das seguintes formas:</p>
@@ -93,89 +137,145 @@
         </section>
     </main>
 
+    <!-- Footer -->
     <footer>
+        <!-- Rodapé da página -->
         <div class="footer-container">
+            <!-- Container principal do rodapé -->
             <div class="left-section">
+                <!-- Seção esquerda do rodapé -->
+                
+                <!-- Redes Sociais -->
                 <div class="social-media">
                     <p class="ps">Siga-nos:</p>
+                    <!-- Título da seção de redes sociais -->
                     <div class="social-media-links">
+                        <!-- Links para redes sociais -->
                         <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                        <!-- Ícone do Facebook -->
                         <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <!-- Ícone do Instagram -->
                         <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <!-- Ícone do Twitter -->
                     </div>
                 </div>
+
+                <!-- Links Úteis -->
                 <div class="footer-links">
+                    <!-- Links rápidos no rodapé -->
                     <a href="fale-conosco.html">Fale Conosco</a>
+                    <!-- Link para página de contato -->
                     <a href="faq.html">FAQ</a>
+                    <!-- Link para perguntas frequentes -->
                     <a href="ajuda.html">Ajuda</a>
+                    <!-- Link para página de ajuda -->
                 </div>
             </div>
 
-
+            <!-- Seção de Marcas -->
             <div class="brands-section">
                 <div class="brands-logos">
+                    <!-- Logos das marcas parceiras -->
                     <a href="https://www.gibson.com" target="_blank">
                         <img src="img/gibson1.png" alt="Gibson" class="brand-logo">
                     </a>
+                    <!-- Logo Gibson -->
                     <a href="https://www.fender.com" target="_blank">
                         <img src="img/fender.png" alt="Fender" class="brand-logo">
                     </a>
+                    <!-- Logo Fender -->
                     <a href="https://www.jacksonguitars.com" target="_blank">
                         <img src="img/jacksom.png" alt="Jackson" class="brand-logo">
                     </a>
+                    <!-- Logo Jackson -->
                     <a href="https://www.espguitars.com" target="_blank">
                         <img src="img/esp1.jpg" alt="ESP" class="brand-logo">
                     </a>
+                    <!-- Logo ESP -->
                     <a href="https://www.ltdguitars.com" target="_blank">
                         <img src="img/ltd.png" alt="LTD" class="brand-logo">
                     </a>
+                    <!-- Logo LTD -->
                     <a href="https://www.washburn.com" target="_blank">
                         <img src="img/washburn.png" alt="Washburn" class="brand-logo">
                     </a>
+                    <!-- Logo Washburn -->
                 </div>
                 <p class="copyright">&copy; 2025 Código Teste - Nilson Gomes. Todos os direitos reservados.</p>
+                <!-- Texto de copyright -->
             </div>
 
+            <!-- Newsletter -->
             <div class="newsletter">
+                <!-- Seção de newsletter -->
                 <p class="ps">Assine nossa newsletter:</p>
+                <!-- Texto de chamada -->
                 <input type="email" placeholder="Seu e-mail" aria-label="Seu e-mail">
+                <!-- Campo de entrada de e-mail -->
                 <button>Assinar</button>
+                <!-- Botão de assinar -->
             </div>
         </div>
     </footer>
 
+    <!-- Modal de Login/Cadastro -->
     <div id="login-cadastro-modal" class="modal">
+        <!-- Modal (janela flutuante) para login/cadastro -->
         <div class="modal-content" style="background-image: url(img/banner.png)">
+            <!-- Conteúdo do modal -->
             <span class="close" onclick="fecharModal()">&times;</span>
+            <!-- Botão para fechar o modal -->
             <div class="tabs">
+                <!-- Abas para alternar entre login e cadastro -->
                 <button class="tab-link active" onclick="openTab(event, 'Login')">Login</button>
+                <!-- Aba de login (ativa por padrão) -->
                 <button class="tab-link" onclick="openTab(event, 'Cadastro')">Cadastro</button>
+                <!-- Aba de cadastro -->
             </div>
             <div id="Login" class="tab-content active">
+                <!-- Conteúdo da aba de login -->
                 <h2 class="h2a">Login</h2>
+                <!-- Título do formulário de login -->
                 <form>
+                    <!-- Formulário de login -->
                     <label for="login-email">E-mail:</label>
+                    <!-- Rótulo do campo de e-mail -->
                     <input type="email" id="login-email" name="login-email" required>
+                    <!-- Campo de entrada de e-mail -->
                     <label for="login-senha">Senha:</label>
+                    <!-- Rótulo do campo de senha -->
                     <input type="password" id="login-senha" name="login-senha" required>
+                    <!-- Campo de entrada de senha -->
                     <button type="submit">Entrar</button>
+                    <!-- Botão de submit -->
                 </form>
             </div>
             <div id="Cadastro" class="tab-content">
+                <!-- Conteúdo da aba de cadastro -->
                 <h2 class="h2a">Cadastro</h2>
+                <!-- Título do formulário de cadastro -->
                 <form id="form-cadastro">
+                    <!-- Formulário de cadastro -->
                     <label for="nome">Nome:</label>
+                    <!-- Rótulo do campo de nome -->
                     <input type="text" id="nome" name="nome" required>
+                    <!-- Campo de entrada de nome -->
                     <label for="email">E-mail:</label>
+                    <!-- Rótulo do campo de e-mail -->
                     <input type="email" id="email" name="email" required>
+                    <!-- Campo de entrada de e-mail -->
                     <label for="senha">Senha:</label>
+                    <!-- Rótulo do campo de senha -->
                     <input type="password" id="senha" name="senha" required>
+                    <!-- Campo de entrada de senha -->
                     <button type="submit">Cadastrar</button>
+                    <!-- Botão de submit -->
                 </form>
             </div>
         </div>
     </div>
     
+    <!-- Widget VLibras (Acessibilidade para Libras) -->
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
         <div vw-plugin-wrapper>
@@ -187,9 +287,12 @@
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
 
+    <!-- Scripts JavaScript -->
     <script src="js/script.js"></script>
+    <!-- Link para o arquivo JavaScript principal -->
     <script src="js/login.js"></script>
+    <!-- Link para o arquivo JavaScript de login -->
     <script src="js/ajuda.js"></script>
+    <!-- Link para o arquivo JavaScript específico da página de ajuda -->
 </body>
-
 </html>
